fix: replacing the GET method with the idOrganization in the uri, and using instead a POST method with the id in the body
