# services/backend/src/main/java/com/soprasteria/g4it/backend/apirecommendationds/dto/OrganisationRequest.java
@@ -1,0 +1,8 @@
+package com.soprasteria.g4it.backend.apirecommendationds.dto;
+
+import lombok.Data;
+
+@Data
+public class OrganisationRequest {
+    private Long organisationId;
+} 
