# services/backend/src/main/resources/swagger/greenit/recommendation.yml
@@ -42,15 +42,21 @@ paths:
   # ─────────────────────────────────────────────────────────────
   # CRUD on recommendations for an organisation
   # ─────────────────────────────────────────────────────────────
-  /api/v1/evaluation/organisations/{organisationId}/recommendations:
-    parameters:
-      - $ref: '#/components/parameters/organisationIdPathParam'
-    get:
+  /api/v1/evaluation/organisations/recommendations:
+    post:
       tags:
         - recommendation
       summary: Get all recommendations for an organisation
       x-custom-role: "hasRole('DIGITAL_SERVICE_READ')"
       operationId: getRecommendationsByOrganisation
+
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/OrganisationRequest"
+
       responses:
         '200':
           description: List of recommendations for the organisation
@@ -60,12 +66,9 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/RecommendationDSRest"
-        '401':
-          $ref: '#/components/responses/UnauthorizedError'
-        '404':
-          $ref: '#/components/responses/NotFoundError'
-        '500':
-          $ref: "#/components/responses/InternalServerError"
+  /api/v1/evaluation/organisations/{organisationId}/recommendations:
+    parameters:
+      - $ref: '#/components/parameters/organisationIdPathParam'
     post:
       tags:
         - recommendation
@@ -265,3 +268,12 @@ components:
           type: string
         message:
           type: string
+
+    OrganisationRequest:
+      type: object
+      required:
+        - organisationId
+      properties:
+        organisationId:
+          type: integer
+          format: int64
